feat: @Slf4j annotated logs